// --- 1. User Management Context ---
TableGroup UsersContext {
  Users // Done
  Sellers // Done
  Customers // Done
  CustomerAddresses // Done
}

// Identity and Authentication management
Table Users {
  Id guid [pk] 
  Email varchar [unique]
  PasswordHash varchar
  Role enum // Defines permissions (Admin, Seller, Customer)
  IsActive bool
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Business details for vendors selling on the platform
Table Sellers {
  Id guid [pk] 
  UserId guid [ref: - Users.Id] // Links profile to login credentials
  StoreName varchar
  IsVerified bool
  FulfillmentType enum // Shipping via Seller (FBM) or Platform (FBS)
  RatingScore decimal
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Profile and loyalty data for shoppers
Table Customers {
  Id guid [pk]
  UserId guid [ref: - Users.Id]
  FullName varchar
  LoyaltyTier enum 
  PointsBalance int
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Shipping locations for customer orders
Table CustomerAddresses {
  Id guid [pk]
  CustomerId guid [ref: > Customers.Id]
  AddressDetails text
  IsDefault bool // Primary address for checkout
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// --- 2. Catalog & Products Context ---
TableGroup CatalogContext { 
  Categories // Done
  Brands // Done
  Products // Done
  ProductMedia // Done
}

// Product hierarchy and category-specific business rules
Table Categories {
  Id guid [pk]
  ParentId guid [ref: > Categories.Id, null] // Supports nested sub-categories
  NameAr varchar
  PricingLogicConfig json // Storage for fee percentages or commission rules
  CreatedAt timestamp
  UpdatedAt timestamp
  IsActive bool [default: true]
  IsDeleted bool [default: false]
}

Table Brands {
  Id guid [pk]
  Name varchar
  CreatedAt timestamp
  UpdatedAt timestamp
  IsActive bool [default: true]
  IsDeleted bool [default: false]
}

// The "Master" product template shared by all sellers
Table Products {
  Id guid [pk]
  CategoryId guid [ref: > Categories.Id]
  BrandId guid [ref: > Brands.Id]
  MasterSku varchar [unique]
  TitleAr varchar
  DescriptionAr text
  PricingType enum // Logic selector: 1=Fixed, 2=Attribute, 3=Quantity, 4=Hybrid
  CreatedAt timestamp
  UpdatedAt timestamp
  IsActive bool [default: true]
  IsDeleted bool [default: false]
}

Table ProductMedia {
  Id guid [pk]
  ProductId guid [ref: > Products.Id]
  Url varchar
  IsPrimary bool // Main image for search results
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// --- 3. Marketplace & Pricing Context ---
TableGroup MarketplaceContext { 
  SellerOffers // Done
  PricingVariations // Done
  PricingQuantityTiers // Done
  InventoryLogs // Done
  PriceAuditLogs // Done
}

// Links sellers to products with specific prices and stock
Table SellerOffers {
  Id guid [pk]
  SellerId guid [ref: > Sellers.Id]
  ProductId guid [ref: > Products.Id]
  BasePrice decimal
  StockQuantity int
  BuyBoxScore decimal // Algorithmic rank for winning the main "Buy" button
  IsBuyBoxWinner bool
  BuyBoxUpdatedAt timestamp
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Adjusts price based on attributes (e.g., +$10 for Size XL)
Table PricingVariations {
  Id guid [pk]
  OfferId guid [ref: > SellerOffers.Id]
  SkuVariant varchar [unique]
  Attributes json // { "Color": "Blue", "Size": "M" }
  PriceAdjustment decimal
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Supports B2B bulk discounts (e.g., buy 10+ items for 5% off)
Table PricingQuantityTiers {
  Id guid [pk]
  OfferId guid [ref: > SellerOffers.Id]
  MinQuantity int
  DiscountValue decimal
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Financial history of price fluctuations
Table PriceAuditLogs {
  Id guid [pk]
  OfferId guid [ref: > SellerOffers.Id]
  OldPrice decimal
  NewPrice decimal
  ChangeReason varchar
  ChangedBy guid [ref: > Users.Id]
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Logs for stock movement (Incoming/Outgoing/Damaged)
Table InventoryLogs {
  Id guid [pk]
  OfferId guid [ref: > SellerOffers.Id]
  ChangeQty int
  Reason varchar
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// --- 4. Orders, Returns & Financials ---
TableGroup SalesContext { 
  Orders
  OrderItems
  ReturnRequests
  CustomerWallets
  SellerWallets
  WalletTransactions 
}

// High-level order status and totals
Table Orders {
  Id guid [pk]
  CustomerId guid [ref: > Customers.Id]
  TotalAmount decimal
  OrderStatus enum // Pending, Processing, Shipped, Delivered, Canceled
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Detailed snapshot of items purchased (includes price at time of sale)
Table OrderItems {
  Id guid [pk]
  OrderId guid [ref: > Orders.Id]
  OfferId guid [ref: > SellerOffers.Id]
  UnitPrice decimal 
  Quantity int
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Table to manage product returns and refund status
Table ReturnRequests {
  Id guid [pk] // BaseEntity
  OrderItemId guid [ref: > OrderItems.Id] // Links to the specific purchased item
  Reason enum // e.g., Damaged, WrongItem, NoLongerNeeded
  Status enum // e.g., Pending, Approved, Rejected, Refunded
  RefundAmount decimal // The actual amount to be returned to the customer
  SellerActionNote text // Feedback from the seller regarding the return
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Manages customer refunds and store credits
Table CustomerWallets {
  Id guid [pk]
  CustomerId guid [ref: - Customers.Id]
  Balance decimal
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Manages seller earnings and pending payouts
Table SellerWallets {
  Id guid [pk]
  SellerId guid [ref: - Sellers.Id]
  BalanceWithdrawable decimal
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Ledger tracking every cent moving in the system (Auditing)
Table WalletTransactions {
  Id guid [pk]
  UserId guid [ref: > Users.Id]
  Amount decimal 
  TransactionType enum // Deposit, Withdrawal, Refund, Commission
  ReferenceId guid // External link to OrderId or ReturnId
  Description varchar
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// --- 5. Marketing Context ---
TableGroup MarketingContext { 
  MarketingCampaigns
  CampaignParticipants
  PromoCodes 
}

// Flash sales or seasonal events (e.g., Black Friday)
Table MarketingCampaigns {
  Id guid [pk]
  Name varchar
  FundingMode enum // Seller, Platform, or Co-Funded split
  StartDate timestamp
  EndDate timestamp
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Links specific seller offers to a campaign with price overrides
Table CampaignParticipants {
  Id guid [pk]
  CampaignId guid [ref: > MarketingCampaigns.Id]
  OfferId guid [ref: > SellerOffers.Id]
  DiscountOverride decimal
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

/* PromoCodes Logic:
  - C# Implementation: Use a [NotMapped] Calculated Property 'TargetType'
  - Logic: 
    If CategoryId != null -> "Category"
    If BrandId != null -> "Brand"
    If SellerId != null -> "Seller"
    Else -> "Global"
*/
Table PromoCodes {
  Id guid [pk]
  Code varchar [unique]
  Type enum // Fixed amount or Percentage
  
  // Targeted Discount Links (Null indicates a Global site-wide code)
  CategoryId guid [ref: > Categories.Id, null]
  BrandId guid [ref: > Brands.Id, null]
  SellerId guid [ref: > Sellers.Id, null]
  
  MinOrderValue decimal
  IsActive bool
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// --- 6. Logistics Context ---
TableGroup LogisticsContext {
  ShippingMethods
  ShippingZones
  ShippingRates
  Shipments 
}

Table ShippingMethods {
  Id guid [pk]
  Name varchar // Standard, Express, Next Day
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

Table ShippingZones {
  Id guid [pk]
  Name varchar // Domestic, International, Specific Region
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Matrix for pricing: (Method + Zone = Price)
Table ShippingRates {
  Id guid [pk]
  ShippingMethodId guid [ref: > ShippingMethods.Id]
  ZoneId guid [ref: > ShippingZones.Id]
  Rate decimal
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}

// Tracking individual order delivery progress
Table Shipments {
  Id guid [pk]
  OrderId guid [ref: - Orders.Id]
  ShippingMethodId guid [ref: > ShippingMethods.Id]
  TrackingNumber varchar
  ShipmentStatus enum // InTransit, OutForDelivery, Delivered
  CreatedAt timestamp
  UpdatedAt timestamp
  IsDeleted bool [default: false]
}